# Inhaler_v4_respimat_UI

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/MPU6050/: MPU6050.h
main/: CMakeLists.txt  Kconfig.projbuild  audio_provider.cc  audio_provider.h  buzzer.cc  buzzer.h  device_config.h  feature_provider.cc  feature_provider.h  flow_calculate.cc  flow_calculate.h  flow_transform.cc  idf_component.yml  main.cc  main_functions.cc  message_package.cc  message_package.h  model.cc  model.h  model_settings.cc  model_settings.h  mpu6050.cc  mpu6050.h  pinout_config.h  status.hpp
